<resources>
    <string name="app_name">AgMe</string>
    <string name="sign_in_to_agme">Sign in to AgMe</string>
    <string name="todo">TODO</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">ENTER YOUR EMAIL</string>
    <string name="password">Password</string>
    <string name="enter_your_password">ENTER PASSWORD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">CONFIRM PASSWORD</string>
    <string name="weak">Weak</string>
    <string name="sign_up">SIGN UP</string>
    <string name="default_web_client_id">1046914109128-8odmmk7ordias162snaati72tu7a34qs.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="or">or</string>
    <string name="logout">Logout</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_password_email_sent">Password Reset\nEmail has been sent.\nCheck your Gmail</string>
    <string name="please_wait">PLEASE WAIT</string>
    <string name="no_network">You are not connected to the Internet. Please check your network settings.</string>
    <string name="an_error_occured">An error occurred!\nTry Again.</string>
    <string name="contentDescription">TODO</string>
    <string name="splash_slogan">"Effortless Harvest Management,\nAnytime, Anywhere."</string>
    <string name="home">Home</string>
    <string name="user_test321">User@test321</string>
    <string name="user_default_email">usertest321@gmail.com</string>
    <string name="processing_text">Almost there, Please wait...</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="logout_app">logout</string>
    <string name="tips">Tips</string>
    <string name="analyze">Analyze</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_sub_title">It\'s time to Manage Harvest.</string>
    <string name="search_here">Search Here...</string>
    <string name="overview">Overview</string>
    <string name="manage_crop">Manage Your Crops</string>
    <string name="manage_your_crops">Manage your crop details here.</string>
    <string name="add_new_crop">Add New Crop</string>
    <string name="add_your_crop_details">Tap to Add Your Crop Details.</string>
    <string name="crop_name">Crop Name</string>
    <string name="add_crop_name">ADD CROP NAME</string>
    <string name="feild_size">Feild Size</string>
    <string name="add_feild_size">ADD FIELD SIZE</string>
    <string name="date_of_plantation">Date of Plantation</string>
    <string name="save_crop">SAVE CROP</string>
    <string name="plantation_date">PLANTATION DATE</string>
    <string name="your_crops">Your Crops</string>
    <string name="total_land_usage">Total Land Usage</string>
    <string name="chemical_cost">Chemical Cost</string>
    <string name="rs_not_available">Rs: Not Available</string>
    <string name="other_expenses">Other Expenses</string>
    <string name="labour_cost">Labour Cost</string>
    <string name="expense">Expense</string>
    <string name="harvest_amount">Harvest Amount</string>
    <string name="not_available">Not Available</string>
    <string name="income">Income</string>
    <string name="add_crop">ADD CROP</string>
    <string name="location_district">Location (District)</string>
    <string name="tap_to_add_details">Tap to Add Details</string>
    <string name="district">District</string>
    <string name="add_district">ADD DISTRICT</string>
    <string name="add_fertilizer_details">Add Fertilizer Details</string>
    <string name="add_expense_details">Add Expense Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_number">ENTER NUMBER</string>
    <string name="delete">Delete</string>
    <string name="password_strength">Password Strength: </string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="username">UserName</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="profession">Profession</string>
    <string name="enter_profession">SELECT PROFESSION</string>
    <string name="profession_NEW">PROFESSION</string>
    <string name="fertilized_date">Fertilized Date</string>
    <string name="fertilized_amount_kg">Fertilized Amount (KG)</string>
    <string name="add_amount">ADD AMOUNT</string>
    <string name="labour_costs">LABOUR COSTS</string>
    <string name="fertilized_costs">fertilized Costs</string>
    <string name="add_fertilizer_costs">ADD FERTILIZER COSTS</string>
    <string name="add_other_costs">ADD OTHER COSTS</string>
    <string name="add_income_details">Add Income Details</string>
    <string name="select_crop">SELECT CROP</string>
    <string name="hide_crops">Tap to hide your crops</string>
    <string name="tap_to_view_your_crops">Tap to view your crops</string>

    <!-- List of crops -->
    <string name="vegi1">Beans</string>
    <string name="vegi2">Black gram</string>
    <string name="vegi3">Chickpeas</string>
    <string name="vegi4">Drumstick</string>
    <string name="vegi5">Green Grams</string>
    <string name="vegi6">Maa karal</string>
    <string name="vegi7">Bitter Gourd</string>
    <string name="vegi8">Cucumber</string>
    <string name="vegi9">Red Chillies</string>
    <string name="vegi10">Pumpkin</string>

    <!-- List of district -->
    <string name="dist1">Ampara</string>
    <string name="dist2">Anuradhapura</string>
    <string name="dist3">Badulla</string>
    <string name="dist4">Batticaloa</string>
    <string name="dist5">Colombo</string>
    <string name="dist6">Galle</string>
    <string name="dist7">Gampaha</string>
    <string name="dist8">Hambantota</string>
    <string name="dist9">Jaffna</string>
    <string name="dist10">Kalutara</string>
    <string name="dist11">Kandy</string>
    <string name="dist12">Kegalle</string>
    <string name="dist13">Kilinochchi</string>
    <string name="dist14">Kurunegala</string>
    <string name="dist15">Mannar</string>
    <string name="dist16">Matale</string>
    <string name="dist17">Matara</string>
    <string name="dist18">Monaragala</string>
    <string name="dist19">Mullaitivu</string>
    <string name="dist20">Nuwara Eliya</string>
    <string name="dist21">Polonnaruwa</string>
    <string name="dist22">Puttalam</string>
    <string name="dist23">Ratnapura</string>
    <string name="dist24">Trincomalee</string>
    <string name="dist25">Vavuniya</string>
    <string name="field_size_perch">FIELD SIZE (PERCH)</string>
    <string name="update_details">UPDATE DETAILS</string>
    <string name="analyze_your_data">Analyze Your Data</string>
    <string name="analyze_your_crop_data_here">Analyze your crop data here.</string>
    <string name="get_expert_tips">Get Expert Tips</string>
    <string name="get_tips_for_improve_harvest">Get tips for improve harvest</string>
    <string name="add_harvest_amount">ADD HARVEST AMOUNT</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="n_a">N/A</string>
    <string name="feels_like">FEELS LIKE</string>
    <string name="humidity">HUMIDITY</string>

</resources>