<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/contentDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/pexels_2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginHorizontal="35dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/my_logo"
            android:id="@+id/splash_logo"
            android:layout_above="@+id/vector_image"
            android:layout_marginTop="80dp"
            android:layout_alignParentTop="true"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:visibility="gone"
            android:id="@+id/vector_image"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/splash_screen_logo"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/sloganTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_logo"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="left"
            android:text="@string/splash_slogan"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_anim_splash"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>
</FrameLayout>