<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/reset_password_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/loginTV"
        android:layout_below="@+id/logo_img"
        android:text="Reset Password"
        android:textFontWeight="1000"
        android:fontFamily="@font/avenirnextltpro_bold"
        android:textStyle="bold"
        android:padding="0dp"
        android:textSize="28sp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        tools:ignore="HardcodedText"
        tools:targetApi="p" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/login_description"
        android:layout_below="@+id/loginTV"
        android:text="Provide your account's email for which you want to reset your password."
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:textSize="14sp"
        android:padding="0dp"
        android:gravity="center_vertical"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/sign_in_layout"
        android:layout_below="@+id/login_description"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:dividerThickness="1dp"
                android:layout_weight="1"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:dividerThickness="1dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/email_address"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/avenirnextltpro_bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/textInputTheme"
            android:padding="0dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/text_input_background"
            android:textColorHint="@color/primary_color"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/close_circle_svgrepo_com"
            app:endIconTint="@color/quantum_orange400">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputRP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/sms_svgrepo_com"
                android:drawablePadding="5dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:maxHeight="48dp"
                android:maxLines="1"
                android:paddingVertical="13dp"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_password_btn"
                android:layout_width="match_parent"
                android:tooltipText="ENCRYPT TEXT"
                android:layout_height="60dp"
                app:rippleColor="@color/text_color_grey"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/reset_password"
                android:fontFamily="@font/josefinsans_bold"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                app:cornerRadius="5dp"
                tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</RelativeLayout>